--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -2,12 +2,11 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 5.4.210 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-12.2.0 (GCC) 12.2.0"
+CONFIG_CC_VERSION_TEXT="aarch64-none-elf-gcc-12.2.0 (GCC) 12.2.0"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=120200
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
-CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
@@ -737,25 +736,25 @@ CONFIG_QUEUED_SPINLOCKS=y
 CONFIG_ARCH_USE_QUEUED_RWLOCKS=y
 CONFIG_QUEUED_RWLOCKS=y
 CONFIG_ARCH_HAS_SYSCALL_WRAPPER=y
-# CONFIG_GKI_HIDDEN_DRM_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_REGMAP_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_CRYPTO_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_SND_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_SND_SOC_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_MMC_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_GPIO_CONFIGS is not set
+CONFIG_GKI_HIDDEN_DRM_CONFIGS=y
+CONFIG_GKI_HIDDEN_REGMAP_CONFIGS=y
+CONFIG_GKI_HIDDEN_CRYPTO_CONFIGS=y
+CONFIG_GKI_HIDDEN_SND_CONFIGS=y
+CONFIG_GKI_HIDDEN_SND_SOC_CONFIGS=y
+CONFIG_GKI_HIDDEN_MMC_CONFIGS=y
+CONFIG_GKI_HIDDEN_GPIO_CONFIGS=y
 # CONFIG_GKI_HIDDEN_QCOM_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_MEDIA_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_VIRTUAL_CONFIGS is not set
-# CONFIG_GKI_LEGACY_WEXT_ALLCONFIG is not set
-# CONFIG_GKI_HIDDEN_USB_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_SOC_BUS_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_RPMSG_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_GPU_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_IRQ_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_HYPERVISOR_CONFIGS is not set
-# CONFIG_GKI_HIDDEN_MM_CONFIGS is not set
-# CONFIG_GKI_HACKS_TO_FIX is not set
+CONFIG_GKI_HIDDEN_MEDIA_CONFIGS=y
+CONFIG_GKI_HIDDEN_VIRTUAL_CONFIGS=y
+CONFIG_GKI_LEGACY_WEXT_ALLCONFIG=y
+CONFIG_GKI_HIDDEN_USB_CONFIGS=y
+CONFIG_GKI_HIDDEN_SOC_BUS_CONFIGS=y
+CONFIG_GKI_HIDDEN_RPMSG_CONFIGS=y
+CONFIG_GKI_HIDDEN_GPU_CONFIGS=y
+CONFIG_GKI_HIDDEN_IRQ_CONFIGS=y
+CONFIG_GKI_HIDDEN_HYPERVISOR_CONFIGS=y
+CONFIG_GKI_HIDDEN_MM_CONFIGS=y
+CONFIG_GKI_HACKS_TO_FIX=y
 CONFIG_FREEZER=y
 
 #
@@ -786,6 +785,8 @@ CONFIG_ARCH_KEEP_MEMBLOCK=y
 CONFIG_MEMORY_ISOLATION=y
 # CONFIG_MEMORY_HOTPLUG is not set
 CONFIG_SPLIT_PTLOCK_CPUS=4
+CONFIG_MEMORY_BALLOON=y
+CONFIG_BALLOON_COMPACTION=y
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 CONFIG_CONTIG_ALLOC=y
@@ -1360,6 +1361,7 @@ CONFIG_WIRELESS=y
 CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
+CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=y
 # CONFIG_NL80211_TESTMODE is not set
@@ -3207,6 +3209,9 @@ CONFIG_REGULATOR_PWM=y
 # CONFIG_REGULATOR_TPS65132 is not set
 # CONFIG_REGULATOR_TPS6524X is not set
 CONFIG_REGULATOR_VCTRL=y
+CONFIG_CEC_CORE=y
+CONFIG_CEC_NOTIFIER=y
+CONFIG_CEC_PIN=y
 CONFIG_RC_CORE=m
 CONFIG_RC_MAP=m
 CONFIG_LIRC=y
@@ -3254,6 +3259,7 @@ CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 # CONFIG_MEDIA_RADIO_SUPPORT is not set
 # CONFIG_MEDIA_SDR_SUPPORT is not set
 CONFIG_MEDIA_CEC_SUPPORT=y
+# CONFIG_CEC_PIN_ERROR_INJ is not set
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_MEDIA_CONTROLLER_DVB=y
 CONFIG_VIDEO_DEV=y
@@ -3696,8 +3702,10 @@ CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_FBDEV_OVERALLOC=100
 # CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
 # CONFIG_DRM_DP_CEC is not set
+CONFIG_DRM_TTM=y
 CONFIG_DRM_GEM_CMA_HELPER=y
 CONFIG_DRM_KMS_CMA_HELPER=y
+# CONFIG_AMLOGIC_DRM_NONROOT is not set
 
 #
 # I2C encoder or helper chips
@@ -3940,8 +3948,12 @@ CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
 CONFIG_SND_PCM=y
+CONFIG_SND_PCM_ELD=y
+CONFIG_SND_PCM_IEC958=y
+CONFIG_SND_DMAENGINE_PCM=y
 CONFIG_SND_HWDEP=y
 CONFIG_SND_RAWMIDI=y
+CONFIG_SND_COMPRESS_OFFLOAD=y
 CONFIG_SND_JACK=y
 CONFIG_SND_JACK_INPUT_DEV=y
 # CONFIG_SND_OSSEMUL is not set
@@ -3954,6 +3966,7 @@ CONFIG_SND_PROC_FS=y
 CONFIG_SND_VERBOSE_PROCFS=y
 # CONFIG_SND_VERBOSE_PRINTK is not set
 # CONFIG_SND_DEBUG is not set
+CONFIG_SND_VMASTER=y
 # CONFIG_SND_SEQUENCER is not set
 # CONFIG_SND_DRIVERS is not set
 # CONFIG_SND_PCI is not set
@@ -3978,6 +3991,9 @@ CONFIG_SND_USB_AUDIO_USE_MEDIA_CONTROLLER=y
 # CONFIG_SND_USB_TONEPORT is not set
 # CONFIG_SND_USB_VARIAX is not set
 CONFIG_SND_SOC=y
+CONFIG_SND_SOC_GENERIC_DMAENGINE_PCM=y
+CONFIG_SND_SOC_COMPRESS=y
+CONFIG_SND_SOC_TOPOLOGY=y
 # CONFIG_SND_SOC_AMD_ACP is not set
 # CONFIG_SND_ATMEL_SOC is not set
 # CONFIG_SND_DESIGNWARE_I2S is not set
@@ -5061,6 +5077,8 @@ CONFIG_ARM_SMMU_V3=y
 #
 # Rpmsg drivers
 #
+CONFIG_RPMSG=y
+# CONFIG_RPMSG_CHAR is not set
 # CONFIG_RPMSG_QCOM_GLINK_RPM is not set
 # CONFIG_RPMSG_VIRTIO is not set
 # end of Rpmsg drivers
@@ -5641,6 +5659,7 @@ CONFIG_ANDROID_KABI_RESERVE=y
 CONFIG_ANDROID_VENDOR_OEM_DATA=y
 # end of Android
 
+CONFIG_TRACE_GPU_MEM=y
 # CONFIG_LIBNVDIMM is not set
 # CONFIG_DAX is not set
 CONFIG_NVMEM=y
@@ -5707,24 +5726,7 @@ CONFIG_AMLOGIC_EFUSE_UNIFYKEY=y
 CONFIG_AMLOGIC_EFUSE=y
 CONFIG_AMLOGIC_UNIFYKEY=y
 # CONFIG_AMLOGIC_EFUSE_BURN is not set
-CONFIG_AMLOGIC_DDR_TOOL=y
-CONFIG_AMLOGIC_DDR_BANDWIDTH=y
-# CONFIG_AMLOGIC_DDR_BANDWIDTH_GXL is not set
-# CONFIG_AMLOGIC_DDR_BANDWIDTH_GX is not set
-CONFIG_AMLOGIC_DDR_BANDWIDTH_G12=y
-CONFIG_AMLOGIC_DDR_BANDWIDTH_T7=y
-# CONFIG_AMLOGIC_DDR_BANDWIDTH_A1 is not set
-CONFIG_AMLOGIC_DDR_BANDWIDTH_T5=y
-CONFIG_AMLOGIC_DDR_BANDWIDTH_S4=y
-CONFIG_AMLOGIC_DDR_BANDWIDTH_S5=y
-CONFIG_AMLOGIC_DMC_MONITOR=y
-CONFIG_AMLOGIC_DMC_MONITOR_G12=y
-# CONFIG_AMLOGIC_DMC_MONITOR_TM2 is not set
-# CONFIG_AMLOGIC_DMC_MONITOR_GX is not set
-# CONFIG_AMLOGIC_DMC_MONITOR_C1 is not set
-CONFIG_AMLOGIC_DMC_MONITOR_T7=y
-CONFIG_AMLOGIC_DMC_MONITOR_S4=y
-CONFIG_AMLOGIC_DMC_MONITOR_S5=y
+# CONFIG_AMLOGIC_DDR_TOOL is not set
 
 #
 # Amlogic Crypto Support
@@ -6172,7 +6174,6 @@ CONFIG_DRM_MESON_USE_ION=y
 CONFIG_DRM_MESON_EMULATE_FBDEV=y
 CONFIG_DRM_MESON_FBDEV_UI_W=1920
 CONFIG_DRM_MESON_FBDEV_UI_H=1080
-# CONFIG_AMLOGIC_DRM_NONROOT is not set
 # CONFIG_AMLOGIC_IRBLASTER is not set
 # CONFIG_AMLOGIC_CPUIDLE is not set
 CONFIG_AMLOGIC_DEFENDKEY=y
@@ -6217,6 +6218,7 @@ CONFIG_AMLOGIC_STACKPROTECTOR=y
 # CONFIG_AMLOGIC_MEM_DEBUG is not set
 # CONFIG_AMLOGIC_PIN_LOCKED_FILE is not set
 CONFIG_AMLOGIC_PCIE_DMA_OPS=y
+CONFIG_AMLOGIC_FAKE_SMMU=y
 CONFIG_AMLOGIC_BT_DEVICE=y
 CONFIG_AMLOGIC_BT_WAKE_NOT_REPORT=y
 CONFIG_AMLOGIC_WIFI=y
@@ -6682,6 +6684,7 @@ CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_AUTHENC=y
 # CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_SIMD=y
+CONFIG_CRYPTO_ENGINE=y
 
 #
 # Public-key cryptography
@@ -6908,6 +6911,7 @@ CONFIG_REED_SOLOMON_ENC8=y
 CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
+CONFIG_INTERVAL_TREE=y
 CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT_MAP=y
@@ -6923,6 +6927,7 @@ CONFIG_ARCH_HAS_SYNC_DMA_FOR_CPU=y
 CONFIG_ARCH_HAS_DMA_PREP_COHERENT=y
 CONFIG_ARCH_HAS_DMA_COHERENT_TO_PFN=y
 CONFIG_SWIOTLB=y
+CONFIG_DMA_RESTRICTED_POOL=y
 CONFIG_DMA_REMAP=y
 CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_DMA_CMA=y
